# NiftyBot

./: README.txt  config.py  pyproject.toml  requirements.txt  run.bat
api/: index.py
backend/: config.py  main.py  requirements.txt
backend/bot/: scanner.py  strategy.py  telegram_alerts.py  trader.py
bot/: scanner.py  strategy.py
frontend/: angular.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
frontend/src/app/services/: trading.service.ts
