[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "niftybot"
version = "1.0.0"
description = "Trading bot with FastAPI backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "websockets==12.0",
    "yfinance==0.2.40",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "requests==2.32.3",
    "schedule==1.2.2",
    "python-multipart==0.0.9",
]

[tool.setuptools]
packages = ["backend", "bot"]
